updated versions and make it compile on java 17