@@ -61,8 +61,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<!-- the highest java version for which we have tests -->
-					<release>15</release>
-					<compilerArgument>--enable-preview</compilerArgument>
+					<release>17</release>
+					<!--compilerArgument>- -enable-preview</compilerArgument-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -113,7 +113,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<!--argLine>- -enable-preview</argLine -->
 					<includes>
 						<include>**/*Test.java</include>
 						<include>**/*TestSuite.java</include>
